# slide-agent

./: .gitignore  README.md  SPEC.md  pyproject.toml
docs/: implementation.md  progress.md
src/auto_presentation_agent/: __init__.py  assembler.py  data_analysis.py  designer.py  imagegen.py  llm.py  main.py  models.py  outline.py  pipeline.py
tests/: __init__.py  test_agents.py
tests/fixtures/: preview_golden.md
